--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,9 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Home</title>
     <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="navbar">
+        <div style="position:absolute; left: 0;">
+            <ul>
+                <li><a href="/Bio" class="navbar-text">Biographie</a></li>
+                <li><a href="/Galerie" class="navbar-text">Galerie</a></li>
+                <li><a href="/Shop" class="navbar-text">Boutique</a></li>
+                <li><a href="/Contact" class="navbar-text">Contact</a></li>
+                <li><a href="/Blog" class="navbar-text">Blog</a></li>
+            </ul>
+        </div>
+        <div style="width: 100%; text-align: center;">
+            <a href="/"><h1 class="name-header navbar-text">Maral</h1></a>
+        </div>
+        <div style="position:absolute;right: 0;">
+            <ul>
+                <li><a href="/Register" class="navbar-text">S'inscrire</a></li>
+                <li><a href="/Login" class="navbar-text">Connexion</a></li>
+                <li><a href="#" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a></li>
+            </ul>
+        </div>
+    </nav> 
