--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,8 +18,8 @@
             </div>
           </div>
         </div>
-        <div class="footer-copyright text-center py-1">© 2019 Copyright
-          <a href="https://github.com/ablin42"> ablin42</a>
+        <div class="footer-copyright text-center py-1">© 2019 Copyright Maral - 
+          Développé par <a href="https://github.com/ablin42"> @ablin42</a>
         </div>
       </footer>
 </body>
