--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,9 +10,11 @@
     <script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/alert.js"></script>
 </head>
 
 <body>
+    <div id="header">
     <nav class="navbar">
         <div style="position:absolute; left: 0;">
             <ul>
@@ -33,4 +35,5 @@
                 <li><a href="#" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a></li>
             </ul>
         </div>
-    </nav> 
+    </nav>
+    </div> 
