--- a/public/style.css
+++ b/public/style.css
@@ -114,13 +114,17 @@ footer {
 
 .footer-list li {
     display: inline-block;
-    margin: 0 5px 0 5px;
+    margin: 0 10px 0 10px;
 }
 
 .footer-copyright {
     background-color: #cecece;
 }
 
+.footer-logo {
+  width: 40px;
+  height: 40px;
+}
 
 /* login form */
 *{
