--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -29,7 +29,7 @@
             <span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
           </div>
 
-        <input type="submit" class="logbtn" value="S'inscrire" name="register" id="submit-register">
+        <input type="submit" class="logbtn" value="S'inscrire" id="submit-register">
 
         <div class="bottom-text">
             Vous possédez déjà un compte? Connectez-vous ici <a href="#">ici</a>
@@ -38,29 +38,6 @@
       </form>
 
       <script type="text/javascript">
-
-        $(document).ready(function(){
-          $("#submit-register").click(function(e){
-            var header = $('#header');
-            e.preventDefault();
-            $.post("/api/user/register", $("#register-form").serialize(), function(data) {
-              //on success log in the user and redirect to main
-              console.log(data);
-              addAlert(data.alert, header);
-              //setTimeout(function () {window.location.href = "/";}, 1500);
-            })
-            .fail(function(response) {
-              console.log(response.responseJSON);
-              addAlert(response.responseJSON.alert, header);
-            });
-          });
-        });
-
-       /* $(document).ready(function(){
-          if ($(".txtb input").length > 0)
-            $(this).addClass("focus");
-        })*/
-
         $(".txtb input").on("focus",function(){
           $(this).addClass("focus");
         });
