--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,17 +1,17 @@
-<footer class="page-footer font-small blue pt-4">
+<footer class="page-footer font-small blue pt-3">
         <div class="container-fluid text-center text-md-left">
           <div class="row">
             <hr class="clearfix w-100 d-md-none pb-3">
             <div class="footer-links col-md-12 mb-md-0 mb-3">
               <ul class="footer-list">
                 <li>
-                  <a href="#!"><i class="fab fa-instagram fa-2x"></i></a>
+                  <a href="#!"><img class="footer-logo"  src="instagram.svg" alt="instagram-logo"/></a>
                 </li>
                 <li>
-                  <a href="#!"><i class="fab fa-facebook-square fa-2x"></i></a>
+                  <a href="#!"><img class="footer-logo" src="facebook.svg" alt="facebook-logo"/></a>
                 </li>
                 <li>
-                  <a href="#!"><i class="fab fa-pinterest-square fa-2x"></i></a>
+                  <a href="#!"><img class="footer-logo" src="pinterest.svg" alt="pinterest-logo"/></a>
                 </li>
 
               </ul>
