--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -30,10 +30,29 @@
         </div>
         <div style="position:absolute;right: 0;">
             <ul>
-                <li><a href="/Register" class="navbar-text">S'inscrire</a></li>
-                <li><a href="/Login" class="navbar-text">Connexion</a></li>
-                <li><a href="#" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a></li>
+                <% if (!locals.name) { %>
+                    <li><a href="/Register" class="navbar-text">S'inscrire</a></li>
+                    <li><a href="/Login" class="navbar-text">Connexion</a></li>
+                   
+                <% } else { %>
+                    <li><a href="#" class="navbar-text"><%= locals.name %></a></li>
+                    <li><a href="api/user/logout" class="navbar-text">Déconnexion</a></li>
+                <% } %>
+                    <li><a href="#" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a></li>
             </ul>
         </div>
     </nav>
+
+    <% if(messages){ %>
+        <% Object.keys(messages).forEach(function (type) { %>
+          <% messages[type].forEach(function (message) { %>
+            <div class="alert alert-<%= type %>" role="alert" style="width: 60%; margin: auto; text-align: center;">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <%= message %>
+            </div>
+          <% }) %>
+        <% }) %>
+      <% } %>
+
     </div> 
+ 
