cleanup files, reorganizing folders

--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<script src="registerValidation.js"></script>
+<script src="scripts/registerValidation.js"></script>
 <div class="container-fluid"> 
     <form id="register-form" method="POST" action="/api/user/register" onkeyup="validate();" class="login-form register-form">
         <h1 class="form-title">Inscription</h1>
