--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,13 +5,13 @@
             <div class="footer-links col-md-12 mb-md-0 mb-3">
               <ul class="footer-list">
                 <li>
-                  <a href="#!"><img class="footer-logo"  src="instagram.svg" alt="instagram-logo"/></a>
+                  <a href="#!"><img class="footer-logo"  src="svg/instagram.svg" alt="instagram-logo"/></a>
                 </li>
                 <li>
-                  <a href="#!"><img class="footer-logo" src="facebook.svg" alt="facebook-logo"/></a>
+                  <a href="#!"><img class="footer-logo" src="svg/facebook.svg" alt="facebook-logo"/></a>
                 </li>
                 <li>
-                  <a href="#!"><img class="footer-logo" src="pinterest.svg" alt="pinterest-logo"/></a>
+                  <a href="#!"><img class="footer-logo" src="svg/pinterest.svg" alt="pinterest-logo"/></a>
                 </li>
 
               </ul>
