--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -5,28 +5,28 @@
 
     <div class="container">
         <div class="card" style="width: 18rem;">
-            <img src="/dieu.jpg" class="card-img-top" alt="...">
+            <img src="img/dieu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><i>Oeil de dieu</i></h5>
               <p class="card-text"><a href="#">#bleu</a> </p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <img src="img/dieu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Oeil de dieu</h5>
               <p class="card-text"><a href="#">#bleu</a> </p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <img src="img/dieu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Oeil de dieu</h5>
               <p class="card-text"><a href="#">#bleu</a> </p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <img src="img/dieu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Oeil de dieu</h5>
               <p class="card-text"><a href="#">#bleu</a> </p>
