--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -1,6 +1,5 @@
 <% include partials/head %>
 
-<script src="scripts/registerValidation.js"></script>
 <div class="container-fluid"> 
     <form id="register-form" method="POST" action="/api/user/register" onkeyup="validate();" class="login-form register-form">
         <h1 class="form-title">Inscription</h1>
@@ -37,16 +36,8 @@
 
       </form>
 
-      <script type="text/javascript">
-        $(".txtb input").on("focus",function(){
-          $(this).addClass("focus");
-        });
-
-        $(".txtb input").on("blur",function(){
-          if($(this).val() == "")
-          $(this).removeClass("focus");
-        });
-      </script>
+      <script src="scripts/formFocus.js"></script>
+      <script src="scripts/registerValidation.js"></script>
 </div>
   
 <% include partials/footer %>
