--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -1,13 +1,26 @@
 <% include partials/head %>
 
 <div class="container-fluid"> 
+    <% if (locals.level && locals.level > 1) { %>
+      <div class="alert alert-info" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <a href="/Blog/Post">post blog</a>
+      </div>
+    <% } %>
   <div class="container container-blog">
     <% if(locals.blogs){ %>
       <% Object.keys(locals.blogs).forEach(function (index) { %>
           <div class="row">
             <div class="col-8 offset-2">
-              <h3 class="blog-title"><%= locals.blogs[index].title %></h3>
-              <p class="blog-info">posté par <b class="blog-author"><%= locals.blogs[index].author %></b>, <i class="blog-date"><%= locals.blogs[index].date %></i></p>
+              <h3 class="blog-title"><%= locals.blogs[index].title %></h3> 
+              <p class="blog-info">posté par 
+                <b class="blog-author"><%= locals.blogs[index].author %></b>, <i class="blog-date"><%= locals.blogs[index].date %></i>
+                <% if (locals.level && locals.level > 1) { %>
+                  <a href="/Blog/Patch/<%= locals.blogs[index]._id %>"><i class="fas fa-edit"></i></a>
+                <% } %>  
+              </p>
               <p class="blog-content"><%= locals.blogs[index].content %></p>
             </div>
           </div>
