--- a/views/User.ejs
+++ b/views/User.ejs
@@ -9,23 +9,27 @@
             <%= locals.date %>
         <% } %>
         <div class="info-update"><!--change class form id etc api url-->
-            <form id="name-form" method="POST" action="/api/user/login">
+            <form id="name-form" method="POST" action="/api/user/patch/name">
                 <div class="txtb">
                   <input type="text" name="name" value="<% if (locals.name) { %><%= locals.name %><% } %>" required>
                   <span data-placeholder="Username"></span>
                 </div>
-                <input type="submit" class="info-update-btn" value="Modifier">
+                <input type="submit" class="logbtn info-update-btn" value="Modifier">
               </form>
 
-            <form id="email-form" method="POST" action="/api/user/login">
+            <form id="email-form" method="POST" action="/api/user/patch/email">
               <div class="txtb">
                 <input type="email" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" required>
                 <span data-placeholder="Email"></span>
               </div>
-              <input type="submit" class="info-update-btn" value="Modifier">
+              <input type="submit" class="logbtn info-update-btn" value="Modifier">
             </form>
         
-            <form id="password-form" method="POST" action="/api/user/login">
+            <form id="password-form" method="POST" action="/api/user/patch/password">
+                <div class="txtb">
+                  <input type="password" name="cpassword" required>
+                  <span data-placeholder="Password"></span>
+                </div>
                 <div class="txtb">
                     <input type="password" name="password" required>
                     <span data-placeholder="Password"></span>
@@ -34,7 +38,7 @@
                     <input type="password" name="password2" required>
                     <span data-placeholder="Confirm password"></span>
                 </div>
-                <input type="submit" class="info-update-btn" value="Modifier">
+                <input type="submit" class="logbtn info-update-btn" value="Modifier">
               </form>
           </div>
     </div>
