--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -13,7 +13,7 @@
   <div class="container container-blog" id="container-blog">
     <% if(locals.blogs){ %>
       <% Object.keys(locals.blogs).forEach(function (index) { %>
-          <div class="row blog-row" id="<%= index %>">
+          <div class="row blog-row" id="<%= locals.blogs[index]._id %>">
             <div class="col-8 offset-2">
               <h3 class="blog-title"><%= locals.blogs[index].title %></h3> 
               <p class="blog-info">posté par 
